--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@types/react-dom": "^18.2.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leader-line": "^1.0.5",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-xarrows": "^2.0.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
